--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>台北一日遊</title>
-  <link rel="stylesheet" type="text/css" href="/static/style.css"/>
-  <script defer src="/static/fetchData.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/index.css"/>
+  <script defer src="/static/index.js"></script>
 </head>
 <body>
   <header>
