--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
           <div class="input-block">
             <input type="text" id="search-input" placeholder="輸入景點名稱查詢" />
             <div onclick="searchData()" class="search-btn">
-                <img src="/static/pic/serch-icon.png" alt="search-icon" />
+                <img src="/static/images/serch-icon.png" alt="search-icon" />
             </div>
         </div>
         </div>
@@ -41,14 +41,14 @@
     <section class="view">
       <div class="list-bar">
         <div class="prevbtn">
-          <img onclick="scrollList(-1)" src="/static/pic/prevbtn.png" alt="previous"/>
+          <img onclick="scrollList(-1)" src="/static/images/prevbtn.png" alt="previous"/>
         </div>
         <div class="mrt-block">
           <div class="mrt-list">
           </div>
         </div>
         <div class="nextbtn">
-          <img onclick="scrollList(1)" src="/static/pic/nextbtn.png" alt="next"/>
+          <img onclick="scrollList(1)" src="/static/images/nextbtn.png" alt="next"/>
         </div>
       </div>
     </section>
