Add favicon link to the head of the HTML file

--- a/static/attraction.html
+++ b/static/attraction.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Attraction</title>
+  <title>台北一日遊</title>
+  <link rel="icon" href="/static/images/favicon.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="/static/attraction.css"/>
   <script defer src="/static/attraction.js"></script>
 </head>
