--- a/static/attraction.html
+++ b/static/attraction.html
@@ -26,9 +26,9 @@
       <div class="decorator-bar"></div>
       <div class="container">
         <div class="container_title">登入會員帳號<img onclick="closeSignin()" src="/static/images/icon-close.png" class="icon-close"/></div>
-        <input type="email" id="signin-email" name="email" placeholder="輸入電子信箱" required>
-        <input type="password" id="signin-password" name="password" placeholder="輸入密碼" required>
-        <button type="submit">登入帳戶</button>
+        <input type="email" id="signin-email" class="input-style" name="email" placeholder="輸入電子信箱" required>
+        <input type="password" id="signin-password" class="input-style" name="password" placeholder="輸入密碼" required>
+        <button type="submit" class="submit-style">登入帳戶</button>
         <div id="signin-response" class="signin-font hide">電子郵件或密碼錯誤</div>
         <div id="go-to-signup" class="font16-500">還沒有帳戶？點此註冊</div>
       </div>
@@ -37,10 +37,10 @@
       <div class="decorator-bar"></div>
       <div class="container">
         <div class="container_title">註冊會員帳號<img onclick="closeSignup()" src="/static/images/icon-close.png" class="icon-close"/></div>
-        <input type="text" id="signup-name" name="name" placeholder="輸入姓名" required>
-        <input type="email" id="signup-email" name="email" placeholder="輸入電子郵件" required>
-        <input type="password" id="signup-password" name="password" placeholder="輸入密碼" required>
-        <button type="submit">註冊新帳戶</button>
+        <input type="text" id="signup-name" class="input-style" name="name" placeholder="輸入姓名" required>
+        <input type="email" id="signup-email" class="input-style" name="email" placeholder="輸入電子郵件" required>
+        <input type="password" id="signup-password" class="input-style" name="password" placeholder="輸入密碼" required>
+        <button type="submit" class="submit-style">註冊新帳戶</button>
         <div id="signup-response" class="signup-font hide">Email已經註冊帳戶</div>
         <div id="back-to-signin" class="font16-500">已經有帳戶了？點此登入</div>
       </div>
