--- a/static/index.html
+++ b/static/index.html
@@ -22,29 +22,33 @@
         </div>
       </div>
     </nav>
-    <form id=signin class="hide">
-        <div class="decorator-bar"></div>
-        <div class="container">
-          <div class="container_title">登入會員帳號<img onclick="closeSignin()" src="/static/images/icon-close.png" class="icon-close"/></div>
-          <input type="email" id="signin-email" class="input-style" name="email" placeholder="輸入電子信箱" required>
-          <input type="password" id="signin-password" class="input-style" name="password" placeholder="輸入密碼" required>
-          <button type="submit" class="submit-style">登入帳戶</button>
-          <div id="signin-response" class="signin-font hide">電子郵件或密碼錯誤</div>
-          <div id="go-to-signup" class="font16-500">還沒有帳戶？點此註冊</div>
-        </div>
-    </form>
-    <form id="signup" class="hide">
-        <div class="decorator-bar"></div>
-        <div class="container">
-          <div class="container_title">註冊會員帳號<img onclick="closeSignup()" src="/static/images/icon-close.png" class="icon-close"/></div>
-          <input type="text" id="signup-name" class="input-style" name="name" placeholder="輸入姓名" required>
-          <input type="email" id="signup-email" class="input-style" name="email" placeholder="輸入電子郵件" required>
-          <input type="password" id="signup-password" class="input-style" name="password" placeholder="輸入密碼" required>
-          <button type="submit" class="submit-style">註冊新帳戶</button>
-          <div id="signup-response" class="signup-font hide">Email已經註冊帳戶</div>
-          <div id="back-to-signin" class="font16-500">已經有帳戶了？點此登入</div>
-        </div>
-    </form>
+    <dialog id="signinDialog">
+      <form id=signin>
+          <div class="decorator-bar"></div>
+          <div class="container">
+            <div class="container_title">登入會員帳號<img onclick="closeDialog('signinDialog')" src="/static/images/icon-close.png" class="icon-close"/></div>
+            <input type="email" id="signin-email" class="input-style" name="email" placeholder="輸入電子信箱" required>
+            <input type="password" id="signin-password" class="input-style" name="password" placeholder="輸入密碼" required>
+            <button type="submit" class="submit-style">登入帳戶</button>
+            <div id="signin-response" class="signin-font hide">電子郵件或密碼錯誤</div>
+            <div id="go-to-signup" class="font16-500">還沒有帳戶？點此註冊</div>
+          </div>
+      </form>
+    </dialog>
+    <dialog id="signupDialog">
+      <form id="signup">
+          <div class="decorator-bar"></div>
+          <div class="container">
+            <div class="container_title">註冊會員帳號<img onclick="closeDialog('signupDialog')" src="/static/images/icon-close.png" class="icon-close"/></div>
+            <input type="text" id="signup-name" class="input-style" name="name" placeholder="輸入姓名" required>
+            <input type="email" id="signup-email" class="input-style" name="email" placeholder="輸入電子郵件" required>
+            <input type="password" id="signup-password" class="input-style" name="password" placeholder="輸入密碼" required>
+            <button type="submit" class="submit-style">註冊新帳戶</button>
+            <div id="signup-response" class="signup-font hide">Email已經註冊帳戶</div>
+            <div id="back-to-signin" class="font16-500">已經有帳戶了？點此登入</div>
+          </div>
+      </form>
+    </dialog>
   </header>
   <section>
     <div class="welcome">
