--- a/static/booking.html
+++ b/static/booking.html
@@ -50,55 +50,94 @@
       </form>
     </dialog>
   </header>
-  <main>
+  <main id="main-content">
     <section class="view">
-      <div>您好，麥考，待預定的行程如下：</div>
-      <div class="container"></div>
-        <img src="" alt="">
-        <div class="container">
-          <div>
-            <div>台北一日遊：景點名稱</div>
-            <img src="/static/images/icon-delete.png" alt="icon-delete">
+      <div class="headline">
+        <div class="font19-700">您好，</div>
+        <div id="user-name" class="font19-700"></div>
+        <div class="font19-700">，待預定的行程如下：</div>
+      </div>
+      <div class="booking-block">
+        <img id="attraction-img" alt="attraction-img">
+        <div class="booking-block__info">
+          <img src="/static/images/icon-delete.png" alt="icon-delete">
+          <div class="booking-block__info-title">
+            <div>台北一日遊：</div>
+            <div id="attraction-name"></div>
           </div>
-          <div>日期：</div>
-          <div>時間：</div>
-          <div>費用：</div>
-          <div>地點：</div>
+          <div class="booking-block__info-container">
+            <div>日期：</div>
+            <div id="booking-date"></div>
+          </div>
+          <div class="booking-block__info-container">
+            <div>時間：</div>
+            <div id="booking-time"></div>
+          </div>
+          <div class="booking-block__info-container">
+            <div>費用：</div>
+            <div class="booking-block__price-container">
+              <div>新台幣&nbsp;</div>
+              <div id="booking-price"></div>
+              <div>&nbsp;元</div>
+            </div>
+          </div>
+          <div class="booking-block__info-container">
+            <div>地點：</div>
+            <div id="attraction-address"></div>
+          </div>
         </div>
-    </section>
-    <section>
-      <div>
-        <div>您的聯絡資訊</div>
-        <label>聯絡姓名：
-          <input type="text">
-        </label>
-        <label>連絡信箱：
-          <input type="email">
-        </label>
-        <label>手機號碼：
-          <input type="tel"> <!--還是number呢-->
-        </label>
-        <div>請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>  
       </div>
     </section>
-    <section>
-      <div>
-        <div>信用卡付款資訊</div>
-        <label>卡片號碼：
-          <input type="number">
-        </label>
-        <label>過期時間：
-          <input type="month"> <!--要再查一下-->
-        </label>
-        <label>驗證密碼：
-          <input type="number">
-        </label> 
+    <section class="view">
+      <div class="separator-block">
+        <div class="contact-block">
+          <div class="contact-block__title">您的聯絡資訊</div>
+          <label>聯絡姓名：
+            <input id="contact-name" type="text">
+          </label>
+          <label>連絡信箱：
+            <input id="contact-email" type="email">
+          </label>
+          <label>手機號碼：
+            <input type="tel"> <!--還是number呢-->
+          </label>
+          <div class="font16-700">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>  
+        </div>
+      </div>
+    </section>
+    <section class="view">
+      <div class="separator-block">
+        <div class="payment-block">
+          <div class="payment-block__title">信用卡付款資訊</div>
+          <label>卡片號碼：
+            <input type="tel" placeholder="**** **** **** ****">
+          </label>
+          <label>過期時間：
+            <input type="text" placeholder="MM / YY">
+          </label>
+          <label>驗證密碼：
+            <input type="text" placeholder="CVV">
+          </label>
+        </div>
+      </div>
+    </section>
+    <section class="view">
+      <div class="separator-block">
+        <div class="confirm-block">
+          <div class="confirm-block__total font16-700">
+            <div>總價：新台幣&nbsp;</div>
+            <div id="confirm-total">2000</div>
+            <div>&nbsp;元</div>
+          </div>
+          <div class="btn__container">
+            <button class="confirm-block__btn">確認訂購並付款</button>
+          </div>
+        </div>
       </div>
     </section>
   </main>
-  <footer>
+  <footer id="footer-content">
     <div class="copyright">COPYRIGHT © 2021 台北一日遊</div>
   </footer>
-  
 </body>
 </html>
