Complete Booking Page

--- a/static/booking.html
+++ b/static/booking.html
@@ -60,7 +60,7 @@
       <div class="booking-block">
         <img id="attraction-img" alt="attraction-img">
         <div class="booking-block__info">
-          <img src="/static/images/icon-delete.png" alt="icon-delete">
+          <img id="icon-delete" src="/static/images/icon-delete.png" alt="icon-delete">
           <div class="booking-block__info-title">
             <div>台北一日遊：</div>
             <div id="attraction-name"></div>
@@ -101,7 +101,7 @@
           <label>手機號碼：
             <input type="tel"> <!--還是number呢-->
           </label>
-          <div class="font16-700">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>  
+          <div id="notice" class="font16-700">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>  
         </div>
       </div>
     </section>
