Adjust code formatting, remove unnecessary comments

--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -59,7 +59,7 @@
         <diV class="font24-700 margin-bottom10">行程預定成功</diV>
         <div class="font24-700 margin-bottom10">您的訂單編號如下</div>
         <div id="order-number"></div>
-        <div class="font16-500">查詢訂單付款狀況</div>
+        <div class="font16-500" id="checkOrderBtn">查詢訂單詳情</div>
       </div>
     </section>
   </main>
