Add order details query functionality

--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -62,6 +62,14 @@
         <div class="font16-500" id="checkOrderBtn">查詢訂單詳情</div>
       </div>
     </section>
+    <div id="overlay" class="overlay hide"></div>
+    <div id="orderDetailsModal" class="modal hide">
+        <div class="modal-content">
+          <img src="/static/images/icon-close.png" class="close-btn" id="closeModal">
+            <!-- 訂單詳情會插入在這裡 -->
+            <div id="orderDetailsContainer"></div>
+        </div>
+    </div>
   </main>
   <footer>
     <div class="copyright">COPYRIGHT © 2021 台北一日遊</div>
